# DistributedMessageQueue

./: .gitignore  CMakeLists.txt  README.md  build.gradle  run.sh  settings.gradle
common/: router.cc  router.h
consumer/: cg_config  consumer.cc  consumer.h  consumer_client.cc  consumer_group.cc  consumer_group.h
message_queue_server/: main.cc  message_queue_service.cc  message_queue_service.h  rocksdb_wrapper.cc  rocksdb_wrapper.h
producer/: producer.cc  producer.h  producer_client.cc
proto/: message_queue.proto
src/main/java/com/clustercrew/messagequeue/: BookKeeperClient.java  MessageQueueCluster.java  MessageQueueServer.java  Partition.java  PartitionAssigner.java  ZooKeeperClient.java
src/main/proto/: message_queue.proto
src/test/java/com/clustercrew/messagequeue/: MessageQueueServerTest.java
sys_admin/: sys_admin.cc  sys_admin.h  sys_admin_client.cc
test/: consumer.h  consumer_group.h  performace.cc
tests/: different_tests.md  performance_v2.cc
zookeeper/: generate_compose.py  zookeeper_client.cc  zookeeper_client.h
